Added CLI configs
corrected spelling

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@ document.addEventListener('deviceready', function() {
         alert('seemed to work')
     }
     else {
-        alert('fuck')
+        alert('darn it')
     }
   })
 })
